--- a/frontend-svelte/package.json
+++ b/frontend-svelte/package.json
@@ -26,5 +26,9 @@
 		"typescript": "^5.0.0",
 		"typescript-eslint": "^8.0.0",
 		"vite": "^5.0.3"
+	},
+	"dependencies": {
+		"tone": "^15.0.4",
+		"vexflow": "^4.2.5"
 	}
 }
